k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agape
  labels:
    app.kubernetes.io/name: agape
